# orthanc-azure-blob-storage-plugin

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  bootstrap.sh  build.sh  docker-compose.yml
cmake/: FetchAzureStorageCpp.cmake  FetchGoogletest.cmake  FindAzureStorage.cmake  FindCryptoPP.cmake  FindOrthanc.cmake
core/: AesEncryptionKey.cpp  AesEncryptionKey.h  AzureKeyVaultClient.cpp  AzureKeyVaultClient.h  AzureKeyVaultEncryptionKey.cpp  AzureKeyVaultEncryptionKey.h  CMakeLists.txt  Cipher.cpp  Cipher.h  Crypto.cpp  Crypto.h  CryptoMetaData.cpp  CryptoMetaData.h  EncryptionKey.h  EncryptionKeyAes.cpp  EncryptionKeyAes.h  KeyPool.cpp  KeyPool.h
core/azure/: AuthEndpoint.cpp  AuthEndpoint.h  AzureKeyVaultClient.cpp  AzureKeyVaultClient.h  AzureKeyVaultEncryptionKey.cpp  AzureKeyVaultEncryptionKey.h  AzureKeyVaultException.h  JwtToken.cpp  JwtToken.h
docker/: Dockerfile.build  Dockerfile.orthanc  Dockerfile.orthanc-plugins  Dockerfile.postgresql-plugin  Dockerfile.sdk  Dockerfile.sdk.vcpkg  Dockerfile.ubuntu-18.04
plugin/: AzureBlobStorageArea.cpp  AzureBlobStorageArea.h  AzureBlobStorageConnection.cpp  AzureBlobStorageConnection.h  AzureBlobStorageException.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Plugin.cpp
plugin/resources/: azure-blob-storage.json
tests/: CMakeLists.txt  CryptoTest.cpp  StorageTest.cpp
